处理jdk升级对应的方法变更